3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

common/object.c: Add clear_owner function.
include/libproto.h: rebuild.
server/player.c: Modify op_on_battleground to look for battleground
    anyplace on space.  Temp for for wall of thorns on space - as long
    as maps don't try to abuse the use of battlegrounds, should be OK.
server/time.c: Add clear_owner call to stop_arrow.  Fixes problem of
    thrown objects not getting saved.
MSW 2001-04-28

common/object.c: Have update_object map the look window for redraw if
   the object is not something the client normally animates (like a lever).
   MSW 2001-04-27

server/apply.c: Modify apply_id_altar check for player - had a && instead of
    a ||.
socket/item.c: Modify ApplyCmd so a removed player can not apply objects.
   Fix crashes caused by players applying savebeds after they have
   used the bed.  MSW 2001-04-26

server/spell_util.c: have put_a_monster generate random monster
   abilities.
TODO, doc/mapguide: Various minor updates.
MSW 2001-04-25

server/c_object.c: Pass right object to query_cost_string so that
   if you pick up an unpaid object into a container, it generates
   the correct price.  MSW 2001-04-22
server/c_wiz.c: fix shutdown and reset_map wizard commands/function
   so they no longer crash the server.  MSW 2001-04-22

server/monster.c: add check to was_destroyed when monster fires an
   arrow.  Call was certainly missing, and appears to be responsible for
   crash.  MSW 2001-04-20

server/player.c: Clear op->chosen_skill when we get to the play_again
   prompt.  Otherwise, the server may try to use this later on, and it
   no longer points to a valid object, so it results in a crash.